// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Button" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: var(--text-input-background);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: none;
  white-space: nowrap;
  border: 0;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 16px;
  padding: 0 16px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
  width: auto;
  border-radius: 16px;
  height: 48px;
  line-height: 48px;
  max-width: 100%;
  min-width: 125px;
  background-color: var(--accent-color);
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: var(--button-primary-hover);
}

.emotion-1:focus {
  border: 1px solid var(--button-primary-focus-border);
}

.emotion-1:active {
  background-color: var(--button-primary-active);
  border: 1px solid var(--button-primary-active-border);
  color: #fff;
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
  >
    Button
  </button>
</div>
`;

exports[`"Button" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: var(--text-input-background);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: none;
  white-space: nowrap;
  border: 0;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 16px;
  padding: 0 16px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
  width: auto;
  border-radius: 16px;
  height: 48px;
  line-height: 48px;
  max-width: 100%;
  min-width: 125px;
  background-color: var(--accent-color);
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: var(--button-primary-hover);
}

.emotion-1:focus {
  border: 1px solid var(--button-primary-focus-border);
}

.emotion-1:active {
  background-color: var(--button-primary-active);
  border: 1px solid var(--button-primary-active-border);
  color: #fff;
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders as block 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: var(--text-input-background);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: none;
  white-space: nowrap;
  border: 0;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 16px;
  padding: 0 16px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
  width: 100%;
  border-radius: 16px;
  height: 48px;
  line-height: 48px;
  max-width: 100%;
  min-width: 125px;
  background-color: var(--accent-color);
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: var(--button-primary-hover);
}

.emotion-1:focus {
  border: 1px solid var(--button-primary-focus-border);
}

.emotion-1:active {
  background-color: var(--button-primary-active);
  border: 1px solid var(--button-primary-active-border);
  color: #fff;
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders in loading state 1`] = `
@keyframes animation-0 {
  0% {
    stroke-dashoffset: 251.36;
  }

  100% {
    stroke-dashoffset: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: var(--text-input-background);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: none;
  white-space: nowrap;
  border: 0;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 16px;
  padding: 0 16px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
  width: auto;
  border-radius: 16px;
  height: 48px;
  line-height: 48px;
  max-width: 100%;
  min-width: 125px;
  background-color: var(--accent-color);
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: var(--button-primary-hover);
}

.emotion-1:focus {
  border: 1px solid var(--button-primary-focus-border);
}

.emotion-1:active {
  background-color: var(--button-primary-active);
  border: 1px solid var(--button-primary-active-border);
  color: #fff;
}

.emotion-2 {
  -webkit-animation: animation-0 2400ms ease-in-out infinite,animation-1 2400ms linear -1800ms infinite;
  animation: animation-0 2400ms ease-in-out infinite,animation-1 2400ms linear -1800ms infinite;
  stroke-dasharray: 125.68;
  transform-origin: 50% 50%;
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
  >
    <svg
      fill="none"
      height={30}
      strokeWidth="3"
      style={
        {
          "display": "flex",
          "margin": "auto",
        }
      }
      viewBox="0 0 43 43"
      width={30}
    >
      <circle
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="rgba(255, 255, 255, 0.07999999999999996)"
      />
      <circle
        className="emotion-2"
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="#fff"
        strokeDasharray={125.68}
        strokeLinecap="round"
      />
    </svg>
  </button>
</div>
`;

exports[`"Button" renders when disabled 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: var(--button-primary-disabled-text);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: none;
  white-space: nowrap;
  border: 0;
  cursor: default;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 16px;
  padding: 0 16px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
  width: auto;
  border-radius: 16px;
  height: 48px;
  line-height: 48px;
  max-width: 100%;
  min-width: 125px;
  background-color: var(--button-primary-disabled-bg);
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
    disabled={true}
  >
    Submit
  </button>
</div>
`;
